--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ac878f">  <td>22/12/02 13:45:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Finance_Approver_View_RequestPage.ViewRequestDisplay(java.lang.String,java.lang.String)[pri:0, instance:tests.finance_Approver_View_Requests.Finance_Approver_View_RequestPage@6b927fb]">ViewRequestDisplay</td> 
+<tr bgcolor="618275">  <td>22/12/02 18:18:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DepartmentPage.ViewRequestDisplay(java.lang.String,java.lang.String)[pri:0, instance:adminConfigurationTests.department.DepartmentPage@323b36e0]">ViewRequestDisplay</td> 
   <td>main@640070680</td>   <td></td> </tr>
 </table>
