--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b1beb6">  <td>22/12/07 12:30:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ITRequestPage.ITRequestcreation(java.lang.String,java.lang.String)[pri:0, instance:tests.ITRequests.ITRequestPage@45d84a20]">ITRequestcreation</td> 
-  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="e9cf90">  <td>22/12/07 12:33:48</td>   <td>214645</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ViewPage.ViewRequestDisplay(java.lang.String,java.lang.String)[pri:0, instance:tests.ViewPages.ViewPage@6c4906d3]">ViewRequestDisplay</td> 
-  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="9aa67b">  <td>22/12/07 12:31:48</td>   <td>94668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Finance_Approver_Request_ApprovalPage.financeapproval(java.lang.String,java.lang.String)[pri:0, instance:tests.financeApprover_RequestApprovals.Finance_Approver_Request_ApprovalPage@5a59ca5e]">financeapproval</td> 
-  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="8173c4">  <td>22/12/07 12:32:47</td>   <td>154097</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Functional_PO_ApprovalPage.functionalPOapproval(java.lang.String,java.lang.String)[pri:0, instance:tests.functional_PO_Approvals.Functional_PO_ApprovalPage@4bdeaabb]">functionalPOapproval</td> 
-  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="b18bb6">  <td>22/12/07 12:30:54</td>   <td>41261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Functional_Approver_Request_ApprovalPage.functionalapproval(java.lang.String,java.lang.String)[pri:0, instance:tests.functionalApprover_RequestApprovals.Functional_Approver_Request_ApprovalPage@70cf32e3]">functionalapproval</td> 
+<tr bgcolor="9aa67b">  <td>22/12/08 15:30:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ViewPage.ViewRequestDisplay(java.lang.String,java.lang.String)[pri:0, instance:tests.ViewPages.ViewPage@7fd50002]">ViewRequestDisplay</td> 
   <td>main@640070680</td>   <td></td> </tr>
 </table>
